--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -169,10 +169,9 @@ h1, h2, h3, h4, h5, h6 {
 	z-index: 1;
 	/* transition: 0.5s; */
 	backdrop-filter: blur(15px);
-	animation: box-shadow-drop-center 0.5s 1s both, text-shadow-drop-center 0.6s 2s both;
+	/* animation: box-shadow-drop-center 0.5s 1s both, text-shadow-drop-center 0.6s 2s both; */
 }
 #container #btn:hover a {
-    letter-spacing: 0.3rem;
 	color: #a3b9ce;
 
 }
@@ -189,7 +188,7 @@ h1, h2, h3, h4, h5, h6 {
 	filter: blur(0px);
 }
 #container #btn:hover a::before {
-	transform: skewX(45deg) translate(200px);
+	transform: skewX(45deg) translate(250px);
 	transition: 0.5s;
 
 }
@@ -198,13 +197,13 @@ h1, h2, h3, h4, h5, h6 {
 	position: absolute;
 	left: 50%;
 	transform: translatex(-50%);
-	bottom: -5px;
+	bottom: 0px;
 	width: 0px;
 	height: 0.625rem;;
 	background: #f00;
 	border-radius: 10px;
 	transition: 0.5s;
-	transition-delay: 0.5;
+	/* transition-delay: 0.5; */
 }
 #container #btn:hover::before /*lightup button*/ {
 	bottom: 0;
@@ -224,7 +223,7 @@ h1, h2, h3, h4, h5, h6 {
 	background: #f00;
 	border-radius: 10px;
 	transition: 0.5s;
-	transition-delay: 0.5;
+	/* transition-delay: 0.5; */
 }
 #container #btn:hover::after /*lightup button*/ {
 	top: 0;
@@ -354,6 +353,13 @@ h1, h2, h3, h4, h5, h6 {
 	padding: 2.5%;
 }
 
+#blur {
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	backdrop-filter: blur(5px);
+}
+
 #border {
 	color: #311B46;
 	font-weight: 900;
@@ -380,12 +386,16 @@ h1, h2, h3, h4, h5, h6 {
 	border: solid 1px  rgba(255, 255, 255, 0.3);
 	border-radius: 25px;
 	opacity: 0.7;
-}
+	box-shadow: rgba(0, 0, 0, 0.35) 0px -50px 36px -28px inset;}
 
 #game:hover, #game3:hover {
 	border: solid 1px #B9379B;
 	opacity: 0.9;
 	cursor: pointer;
+}
+
+#game3, #game4 {
+	background: rgba(255, 255, 255, 0.25);
 }
 
 #gamename2 {
@@ -479,7 +489,6 @@ h1, h2, h3, h4, h5, h6 {
 #title2{
     overflow: hidden;
     text-shadow: 0 4px 4px #4C848C, 0px -2px 1px #B9379B;
-    border-radius: 25px 25px 0 0;
     letter-spacing: 0.2rem;
     color: #311B46;
 	font-weight: 900;
@@ -493,15 +502,17 @@ h1, h2, h3, h4, h5, h6 {
     letter-spacing: 0.2rem;
     color: #311B46;
 	font-weight: 900;
-	font-size: calc(0.7vw + 0.7vh);
+	font-size: calc(0.8vw + 0.8vh);
+	text-decoration: underline;
 }
 
 #sttlore, #sttrules, #sttcards{
     color: #311B46;
 	font-weight: 700;
-	font-size: calc(0.57vw + 0.57vh);
+	font-size: calc(0.7vw + 0.7vh);
 	text-transform: uppercase;
 	text-shadow: 0 1px 1px #4C848C, 0px -1px 1px #B9379B;
+	text-align: center;
 }
 
 #content h3{
@@ -524,4 +535,18 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 150%;
     animation: rotation 2s infinite linear;
 	margin-right: 3%;
+}
+
+.bgio-client {
+	width: 100%;
+	height: 100%;
+}
+
+#winner {
+	color: #311B46;
+	font-weight: 700;
+	font-size: calc(1vw + 1vh);
+	text-transform: uppercase;
+	text-shadow: 0 1px 1px #4C848C, 0px -1px 1px #B9379B;
+	letter-spacing: 0.1rem;
 }
